--- a/WeatherWithFriends/bin/AndroidManifest.xml
+++ b/WeatherWithFriends/bin/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionName="1.0" xmlns:android="http://schemas.android.com/apk/res/android">
 	
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-	
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
