--- a/WeatherWithFriends/bin/AndroidManifest.xml
+++ b/WeatherWithFriends/bin/AndroidManifest.xml
@@ -18,7 +18,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.weatherwithfriends.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan" >
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
