--- a/WeatherWithFriends/bin/AndroidManifest.xml
+++ b/WeatherWithFriends/bin/AndroidManifest.xml
@@ -6,7 +6,8 @@
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 	<uses-permission android:name="android.permission.INTERNET" />
-	
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="17" />
@@ -15,19 +16,24 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" >    
+
         <activity
             android:name="com.example.weatherwithfriends.MainActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="adjustPan"
-          >
-            
+            android:windowSoftInputMode="adjustPan">
+           
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+           
         </activity>
+        
+        <provider
+		    android:name=".contentprovider.FriendContentProvider"
+		    android:authorities="com.example.weatherwithfriends.friends.contentprovider" />
     </application>
 
 </manifest>
